<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".QuizActivity"
    tools:showIn="@layout/activity_quiz">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/total"
        app:layout_constraintStart_toEndOf="@+id/score_value"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_to_guess"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:maxWidth="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_value"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/quiz_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/imageBackground"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toStartOf="@+id/quiz_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_to_guess" />

    <Button
        android:id="@+id/quiz_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:width="50dp"
        android:background="@color/design_default_color_secondary_variant"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quiz_input" />

    <TextView
        android:id="@+id/score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/total"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>